# MicroNeuralNetworks

./: .gitignore  README.md  capture_wlan0_20260710_095156.pcap  mnn.h
model-generator/: capture_traffic.sh  features.csv  main.py  micronet_torchview  model.c  models.py  pcap-loader.py  pcap_feature_extractor.py  pyproject.toml
model-generator/output/: model.c  model.pth
test/: tester  tester.c
