[project]
name = "model-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commitizen>=4.16.5",
    "graphviz>=0.21",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scapy>=2.7.0",
    "torch>=2.12.1",
    "torchview>=0.2.7",
    "tqdm>=4.68.4",
]
